--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -22,7 +22,7 @@
 <table height="100%" width="100%">
 	<tr>
 		<td align="center" valign="top">
-			<table border="0px" class="table" width="1000">
+			<table class="table" width="1000">
 				<tbody>
 					<tr class="header">
 						<td colspan="2">
@@ -38,8 +38,10 @@
 							<li><a class="scroll" href="get_alerts.php">Recent Alerts</a></li>
 							<li><a class="scroll" href="read_config.php">Configuration</a></li>
 							<li><a class="scroll" href="admin.php">Admin</a></li>
+							<!--
 							<li><a class="scroll" href="#">TBA</a></li>
 							<li><a class="scroll" href="#">TBA</a></li>
+							 -->
 						</ul>
 
 						</td>
