--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 	<title>FalconGate</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="styles/style_my.css" rel="stylesheet">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="scripts/form_validator.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script>
 	
 		$(function(){
