Enhanced API, few WebGUI modifications...

--- a/html/styles/style_my.css
+++ b/html/styles/style_my.css
@@ -136,21 +136,47 @@ ul.vert-one li a.current:hover{
 		border-collapse:collapse; 
 	}
 .TFtable td{ 
-		padding:7px; border:#4e95f4 1px solid;
+		padding:7px; border:#e5e5e5 1px solid;
 	}
 	/* provide some minimal visual accomodation for IE8 and below */
 .TFtable tr{
-		background: #b8d1f3;
+		background: #e5e5e5;
 	}
 	/*  Define the background color for all the ODD background rows  */
 .TFtable tr:nth-child(odd){ 
-		background: #b8d1f3;
+		background: #e5e5e5;
 	}
 	/*  Define the background color for all the EVEN background rows  */
 .TFtable tr:nth-child(even){
-		background: #dae5f4;
+		background: #ffffff;
 	}
 
+/* Content - Get Alerts (Show / Hide More)
+------------------*/	
+div.text-container {
+    margin: 0 auto;
+    width: 75%;    
+}
+
+.text-content{
+    line-height: 1em;
+}
+
+.short-text {
+    overflow: hidden;
+    height: 2em;
+}
+
+.full-text{
+    height: auto;
+}
+
+.show-more {
+    padding: 1px 0;
+    text-align: right;
+}	
+	
+	
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
