--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -39,6 +39,7 @@
 							<li><a class="scroll" href="status.php">Status</a></li>
 							<li><a class="scroll" href="get_alerts.php">Recent Alerts</a></li>
 							<li><a class="scroll" href="read_config.php">Configuration</a></li>
+							<li><a class="scroll" href="logs.php">System Overview</a></li>
 							<li><a class="scroll" href="admin.php">Admin</a></li>
 							<!--
 							<li><a class="scroll" href="#">TBA</a></li>
