Added option to Report Issue via WebGUI.

--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -41,6 +41,7 @@
 							<li><a class="scroll" href="read_config.php">Configuration</a></li>
 							<li><a class="scroll" href="logs.php">System Overview</a></li>
 							<li><a class="scroll" href="admin.php">Admin</a></li>
+							<li><a class="scroll" href="report_issue.php">Report Issue</a></li>
 							<!--
 							<li><a class="scroll" href="#">TBA</a></li>
 							<li><a class="scroll" href="#">TBA</a></li>
