--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -37,6 +37,7 @@
 						<ul class="vert-one">
 							<li><a class="scroll" href="home.php">Home</a></li>
 							<li><a class="scroll" href="status.php">Status</a></li>
+							<li><a class="scroll" href="network_stats.php">Network Statistics</a></li>
 							<li><a class="scroll" href="get_alerts.php">Recent Alerts</a></li>
 							<li><a class="scroll" href="read_config.php">Configuration</a></li>
 							<li><a class="scroll" href="logs.php">System Overview</a></li>
