Minor change in platform naming

--- a/html/templates/footer_index.html
+++ b/html/templates/footer_index.html
@@ -1,5 +1,5 @@
 <div id="footer-wrapper">
-		<footer id="footer"><p>Copyright &#169; 2016 FalconGate</p></footer>
+		<footer id="footer"><p>Copyright &#169; 2019 Falcongate</p></footer>
 	</div>
 
 </body>
