--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-	<title>FalconGate</title>
+	<title>Falcongate</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="styles/style_my.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 					<tr class="header">
 						<td colspan="2">
 						<div id="logout"><a href="logout.php">Logout</a></div>
-						<div id="header_text">FalconGate</div>						
+						<div id="header_text">Falcongate</div>
 						</td>
 					</tr>
 					<tr>
