--- a/html/templates/_footer.html
+++ b/html/templates/_footer.html
@@ -20,7 +20,7 @@
 	</div>
 
 <div id="footer-wrapper">
-		<footer id="footer"><p>Copyright &#169; 2016 FalconGate</p></footer>
+		<footer id="footer"><p>Copyright &#169; 2019 Falcongate</p></footer>
 	</div>
 
 </body>
