--- a/html/templates/_header.html
+++ b/html/templates/_header.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>FalconGate</title>
+	<title>Falcongate</title>
 	<style type="text/css">
 
 		/* Layout */
