--- a/html/templates/footer.html
+++ b/html/templates/footer.html
@@ -2,7 +2,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2" class="footer">Copyright © 2016 FalconGate.</td>
+						<td colspan="2" class="footer">Copyright © 2019 Falcongate.</td>
 					</tr>
 				</tbody>
 			</table>
